openJFX updates